fix footer overlapping problem for small screen size

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -55,8 +55,18 @@ nav {
     width: 60%;
     border: 5px solid;
     border-radius: 20px;
+    margin-bottom: 80px;
 }
 
 .home-ul {
     font-size: 18px;
+}
+
+.footer-section {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 60px;
 }
